# my-agent-toolkit

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  package-lock.json  package.json  pnpm-lock.yaml
.agents/skills/easemob-qa-automation-project/assets/python-pytest-workspace-template/: .gitignore  AUTO-TEST.md  README.md  pyproject.toml
.agents/skills/easemob-qa-automation-project/assets/python-pytest-workspace-template/env/: .env.ebs.example  .env.ngi.example  .env.qa.example  .env.tke.example
.agents/skills/easemob-qa-automation-project/assets/python-pytest-workspace-template/scripts/: bootstrap_venv.sh  run_pytest.sh
.agents/skills/easemob-qa-automation-project/assets/python-pytest-workspace-template/src/: __init__.py  easemob_accounts.py  easemob_chatfiles.py  easemob_client.py  easemob_config.py  easemob_request_logger.py  easemob_runtime_state.py
.github/workflows/: build-memory-service.yml
deploy/compose/: .env.credentials.example  README.md  docker-compose.dev.yml  docker-compose.yml
docs/plans/: 2026-06-24-bot-capability-install-flow.md  2026-06-24-bot-private-capabilities-plan.md  2026-06-24-deployment-integrity-plan.md
docs/specs/: 2026-06-24-bot-private-capabilities-design.md
launchd/: com.my-agent-toolkit.kiro-host-relay.plist
scripts/: dev-down.sh  dev-kiro-relay-watch.sh  dev-kiro-relay.sh  dev-logs.sh  dev-redeploy.sh  dev-status.sh  dev-up.sh  dev-user-credentials-init.sh
services/capability-runner/: Dockerfile  package.json
services/jira-automation-runner/: Dockerfile  package.json
services/llm-runner/: Dockerfile  package.json
(+167 files in other folders)
